--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,7 @@
         </figure>
         <h1 class="animated fadeInDown delay-07s">H Y 1 D R A</h1>
         <ul class="we-create animated fadeInUp delay-1s">
-            <li>Persönliche Webseite | Simon Neubauer</li>
+            <li>Persönliche Webseite  <br> Simon Neubauer</li>
         </ul>
         <a class="link animated fadeInUp delay-1s servicelink" href="#nav">Los geht's</a>
     </div>
@@ -140,7 +140,7 @@ width: 100%;z-index: 100;">
     </div>
     <div class="container" style="display:flex;flex-direction: row;flex-wrap:  wrap  ">
         <div class="Portfolio-box Design" style="padding: 1rem;">
-            <a href="assets/img/webseite.PNG"><img src="assets/img/webseite.PNG" alt=""></a>
+            <img src="assets/img/webseite.PNG" routerLink="/website">
             <h3>Webseite</h3>
             <p>Design</p>
         </div>
@@ -173,5 +173,5 @@ width: 100%;z-index: 100;">
 </section>
 
 <div class="footer py-3" style="text-align: center;">
-    © 2020 Simon Neubauer | hy1dra.com
+    © {{year}} Simon Neubauer | hy1dra.com
 </div>
