--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -127,6 +127,7 @@ width: 100%;z-index: 100;">
     <div class="container">
         <h2>Portfolio</h2>
         <h6 style="margin: 0 0 40px 0;">Alle Projekte sind Open-Source und stehen unter der MIT-Lizenz.</h6>
+        <!--
         <div class="portfolioFilter">
             <ul class="Portfolio-nav">
                 <li><a href="#" data-filter="*" class="current">All</a></li>
@@ -135,7 +136,7 @@ width: 100%;z-index: 100;">
                 <li><a href="#" data-filter=".Applikation">Applikation</a></li>
                 <li><a href="#" data-filter=".Tutorial">Tutorial</a></li>
             </ul>
-        </div>
+        </div>-->
 
     </div>
     <div class="container" style="display:flex;flex-direction: row;flex-wrap:  wrap  ">
@@ -155,17 +156,17 @@ width: 100%;z-index: 100;">
             <p>API</p>
         </div>
         <div class=" Portfolio-box API" style="padding: 1rem;">
-            <a href="assets/img/projekt3.PNG"><img src="assets/img/projekt3.PNG" alt=""></a>
+            <img src="assets/img/projekt3.PNG" alt="">
             <h3>Projekt 4</h3>
             <p>API</p>
         </div>
         <div class=" Portfolio-box Tutorial" style="padding: 1rem;">
-            <a href="assets/img/projekt4.PNG"><img src="assets/img/projekt4.PNG" alt=""></a>
+            <img src="assets/img/projekt4.PNG" alt="">
             <h3>Projekt 5</h3>
             <p>Tutorial</p>
         </div>
         <div class=" Portfolio-box Applikation" style="padding: 1rem;">
-            <a href="assets/img/projekt5.PNG"><img src="assets/img/projekt5.PNG" alt=""></a>
+            <img src="assets/img/projekt5.PNG" alt="">
             <h3>Projekt 6</h3>
             <p>Applikation</p>
         </div>
