--- a/src/app/website/website.component.html
+++ b/src/app/website/website.component.html
@@ -1,7 +1,41 @@
 <div class="container" style="margin-top: 2rem;">
+    <div class="row">
     <div class="col">
         <div>
             <h3 style="font-size: 20px;font-weight: 600;">Website <div routerLink="/" class="arrow float-right">← back</div> </h3>
         </div>
     </div>
+</div>
+    <div class="row">
+        <div class="col">
+          <p>Projektbeschreibung:</p>
+          Die Website wurde mit dem Frontend Framework Angular + Bootstrap erstellt. Als Webserver kommt das ExpressJS Framework auf NodeJS Basis in Einsatz.   
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">#</th>
+                <th scope="col">Dimension</th>
+                <th scope="col">Wert</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row">1</th>
+                <td>Frontend</td>
+                <td>Angular (9.0.1)</td>
+              </tr>
+              <tr>
+                <th scope="row">2</th>
+                <td>Webserver</td>
+                <td>ExpressJS</td>
+              </tr>
+              <tr>
+                <th scope="row">3</th>
+                <td>GUI</td>
+                <td>Bootstrap</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
 </div>
