--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -19,7 +19,7 @@ width: 100%;z-index: 100;">
     <div class="container">
         <ul class="main-nav">
             <li><a href="#header">Home</a></li>
-            <li><a href="#service">Services</a></li>
+            <li><a href="#service">Über Mich</a></li>
             <li class="small-logo"><a href="#header"><img src="assets/img/hydra.PNG" alt=""></a></li>
             <li><a href="#Technologie">Technologie</a></li>
             <li><a href="#Portfolio">Portfolio</a></li>
@@ -31,7 +31,7 @@ width: 100%;z-index: 100;">
 <section class="main-section" id="service">
     <!--main-section-start-->
     <div class="container">
-        <h2>Services</h2>
+        <h2>Über Mich</h2>
         <h6><i>"...langjährige Erfahrung in den Bereichen Business Intelligence,
                 Data Warehouse und Full-Stack Web Entwicklung"</i></h6>
         <div class="row">
@@ -142,33 +142,29 @@ width: 100%;z-index: 100;">
     <div class="container" style="display:flex;flex-direction: row;flex-wrap:  wrap  ">
         <div class="Portfolio-box Design" style="padding: 1rem;">
             <img src="assets/img/webseite.PNG" routerLink="/website">
-            <h3>Webseite</h3>
-            <p>Design</p>
+            <h3>Webseite </h3>
+            <p></p>
         </div>
         <div class="Portfolio-box Applikation" style="padding: 1rem;">
             <img src="assets/img/projekt1.PNG" routerLink="/performance-dashboard">
             <h3>Performance Dashboard</h3>
-            <p>Applikation</p>
+            <!--<p>Applikation</p>-->
         </div>
         <div class=" Portfolio-box API" style="padding: 1rem;">
-            <img src="assets/img/projekt2.PNG" routerLink="/test" alt="">
-            <h3>Projekt 3</h3>
-            <p>API</p>
+            <img src="assets/img/projekt2.PNG" routerLink="/status-cockpit" alt="">
+            <h3>Status Cockpit</h3>
         </div>
         <div class=" Portfolio-box API" style="padding: 1rem;">
             <img src="assets/img/projekt3.PNG" alt="">
             <h3>Projekt 4</h3>
-            <p>API</p>
         </div>
         <div class=" Portfolio-box Tutorial" style="padding: 1rem;">
             <img src="assets/img/projekt4.PNG" alt="">
             <h3>Projekt 5</h3>
-            <p>Tutorial</p>
         </div>
         <div class=" Portfolio-box Applikation" style="padding: 1rem;">
             <img src="assets/img/projekt5.PNG" alt="">
             <h3>Projekt 6</h3>
-            <p>Applikation</p>
         </div>
     </div>
 </section>
