--- a/src/app/website/website.component.html
+++ b/src/app/website/website.component.html
@@ -2,10 +2,17 @@
     <div class="row">
     <div class="col">
         <div>
-            <h3 style="font-size: 20px;font-weight: 600;">Website <div routerLink="/" class="arrow float-right">← back</div> </h3>
+          <h3 style="font-size: 20px;font-weight: 600;">WEBSITE <div class="arrow float-right"> 
+            <span style="margin-right:25px"><a target="_blank" class="github" href="https://github.com/neubasi/website-frontend"><i title="Quellcode" class="fa fa-github"></i></a> </span>
+            <span routerLink="/">← back</span>
+            </div>
+          </h3>
+            <div class="Portfolio-box" style="text-align: center;"><a><img src="assets/img/webseite.PNG" routerLink="/"></a></div>
         </div>
     </div>
 </div>
+<br>
+<hr>
     <div class="row">
         <div class="col">
           <p>Projektbeschreibung:</p>
