--- a/src/app/website/website.component.scss
+++ b/src/app/website/website.component.scss
@@ -1,3 +1,21 @@
 .arrow {
     cursor: pointer 
  }
+
+ .github {
+	color: black;
+    font-size: 1.3rem;
+}
+
+.Portfolio-box img{
+	margin-bottom:25px;
+	transition:all 0.3s ease-in-out;
+	-moz-transition:all 0.3s ease-in-out;
+	-webkit-transition:all 0.3s ease-in-out;	
+	box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
+}
+
+.Portfolio-box img:hover {
+	opacity: 0.6;
+	cursor: pointer;
+}
