--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -32,8 +32,8 @@ width: 100%;z-index: 100;">
     <!--main-section-start-->
     <div class="container">
         <h2>Über Mich</h2>
-        <h6><i>"...langjährige Erfahrung in den Bereichen Business Intelligence,
-                Data Warehouse und Full-Stack Web Entwicklung"</i></h6>
+        <p style="font-size:16px; text-align:center;margin-bottom:1rem" class="padding-b" ><i>"...langjährige Erfahrung in den Bereichen Business Intelligence,
+                Data Warehouse und Full-Stack Web Entwicklung"</i></p>
         <div class="row">
             <div class="col-lg-4 col-sm-6">
                 <div class="service-list">
@@ -80,7 +80,7 @@ width: 100%;z-index: 100;">
     <!--main-section alabaster-start-->
     <div class="container">
         <div class="row">
-            <figure class="col-lg-5 col-sm-4">
+            <figure class="col-lg-5 col-sm-12">
                 <img src="assets/img/technologien.PNG" alt="">
             </figure>
             <div class="col-lg-7 col-sm-8 featured-work">
@@ -126,7 +126,7 @@ width: 100%;z-index: 100;">
     <!--main-section-start-->
     <div class="container">
         <h2>Portfolio</h2>
-        <h6 style="margin: 0 0 40px 0;">Alle Projekte sind Open-Source und stehen unter der MIT-Lizenz.</h6>
+        <p style="margin: 0 0 40px 0;font-size:16px; text-align:center;margin-bottom:1rem">Alle Projekte sind Open-Source und stehen unter der MIT-Lizenz.</p>
         <!--
         <div class="portfolioFilter">
             <ul class="Portfolio-nav">
@@ -139,7 +139,7 @@ width: 100%;z-index: 100;">
         </div>-->
 
     </div>
-    <div class="container" style="display:flex;flex-direction: row;flex-wrap:  wrap  ">
+    <div class="container" style="display:flex;flex-direction: row;flex-wrap:  wrap;justify-content: center;  ">
         <div class="Portfolio-box Design" style="padding: 1rem;">
             <img src="assets/img/webseite.PNG" routerLink="/website">
             <h3>Webseite </h3>
@@ -151,8 +151,8 @@ width: 100%;z-index: 100;">
             <!--<p>Applikation</p>-->
         </div>
         <div class=" Portfolio-box API" style="padding: 1rem;">
-            <img src="assets/img/projekt2.PNG" routerLink="/status-cockpit" alt="">
-            <h3>Status Cockpit</h3>
+            <img src="assets/img/projekt2.PNG" routerLink="/bug-tracker" alt="">
+            <h3>Bug Tracker</h3>
         </div>
         <div class=" Portfolio-box API" style="padding: 1rem;">
             <img src="assets/img/projekt3.PNG" alt="">
