--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -3,11 +3,15 @@
 ---------------------------------*/
 
 .header{
+	
 	text-align:center;
 	/* background: radial-gradient(black, #00000000);*/
 	/*background:url(../img/test.PNG) left top repeat;*/
-	padding:400px 0;
+	padding-top: 20%;
 	height: 100vh;
+	// top: 50%;
+	//-ms-transform: translateY(-50%);
+	//transform: translateY(-50%);
 }
 
 
