--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -32,8 +32,8 @@ width: 100%;z-index: 100;">
     <!--main-section-start-->
     <div class="container">
         <h2>Über Mich</h2>
-        <p style="font-size:16px; text-align:center;margin-bottom:1rem" class="padding-b" ><i>"...langjährige Erfahrung in den Bereichen Business Intelligence,
-                Data Warehouse und Full-Stack Web Entwicklung"</i></p>
+        <p style="font-size:16px; text-align:center;margin-bottom:2rem" class="padding-b" >"...langjährige Erfahrung in den Bereichen Business Intelligence,
+                Data Warehouse und Full-Stack Web Entwicklung"</p>
         <div class="row">
             <div class="col-lg-4 col-sm-6">
                 <div class="service-list">
@@ -85,9 +85,9 @@ width: 100%;z-index: 100;">
             </figure>
             <div class="col-lg-7 col-sm-8 featured-work">
                 <h2>Technologie</h2>
-                <P style="font-size:16px" class="padding-b"><i>"...arbeite sowohl mit kommerziellen
+                <P style="font-size:16px" class="padding-b">"...arbeite sowohl mit kommerziellen
                         Softwarelösungen wie z.B SAP HANA, Microsoft SQL Server, als auch mit Open-Source Technologien."
-                    </i> </P>
+                     </P>
                 <div class="featured-box">
                     <div class="featured-box-col1">
                         <i class="fa fa-database"></i>
