--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -161,7 +161,7 @@ color: #fff;
 	font-style:normal;
 	font-size:38px;
 	display:block;
-	color:#222;
+	//color:#222;
 	line-height:38px;
 }
 .service-list-col2{
