--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,7 +22,7 @@ body {
 h2{
 	font-size:34px;
 	color:#222222;
-	font-family: 'Montserrat', sans-serif;
+	font-family: 'Montserrat', sans-serif!important;
 	font-weight:700;
 	letter-spacing: -1px;
 	margin:0 0 15px 0;
@@ -30,17 +30,17 @@ h2{
 	text-transform:uppercase;
 }
 h3{
-	font-family: 'Montserrat', sans-serif;
+	font-family: 'Montserrat', sans-serif!important;
 	color:#222222;
 	font-size:16px;
-	margin:0 0 5px 0;
+	margin:0 0 5px !important;
 	text-transform:uppercase;
 	font-weight:400;
 }
 h6{
 	font-size:16px;
 	color:#888888;
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Open Sans', sans-serif!important;
 	font-weight:400;
 	text-align:center;
 	margin:0 0 60px 0;
@@ -54,6 +54,7 @@ p{
 html {
 	scroll-behavior: smooth;
 	-webkit-overflow-scrolling: touch;
+	
   }
 
 /* ==========================================================================
